--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,27 +1,48 @@
-<!-- The shortcode functionality - in layouts/shortcodes/img.html -->
-<div class="picture">
-  {{ if .Get "caption"}}
-  <figure>
+{{/* get file that matches the filename as specified as src="" in shortcode */}}
+{{ $src := .Page.Resources.GetMatch (printf "*%s*" (.Get "src")) }}
+
+{{/* set image sizes, these are hardcoded for now, x dictates that images are resized to this width */}}
+
+{{ $tinyw := default "500x" }}
+{{ $smallw := default "800x" }}
+{{ $mediumw := default "1200x" }}
+{{ $largew := default "1500x" }}
+
+{{/* resize the src image to the given sizes */}}
+
+{{ .Scratch.Set "tiny" ($src.Resize $tinyw) }}
+{{ .Scratch.Set "small" ($src.Resize $smallw) }}
+{{ .Scratch.Set "medium" ($src.Resize $mediumw) }}
+{{ .Scratch.Set "large" ($src.Resize $largew) }}
+
+{{/* add the processed images to the scratch */}}
+
+{{ $tiny := .Scratch.Get "tiny" }}
+{{ $small := .Scratch.Get "small" }}
+{{ $medium := .Scratch.Get "medium" }}
+{{ $large := .Scratch.Get "large" }}
+
+{{/* only use images smaller than or equal to the src (original) image size, as Hugo will upscale small images */}}
+{{/* set the sizes attribute to (min-width: 35em) 1200px, 100vw unless overridden in shortcode */}}
+
+<img 
+  {{ with .Get "sizes" }}sizes='{{.}}'{{ else }}sizes="(min-width: 35em) 1200px, 100vw"{{ end }}
+  srcset='
+  {{ if ge $src.Width "500" }}
+    {{ with $tiny.RelPermalink }}{{.}} 500w{{ end }}
   {{ end }}
-    <picture>
-      <!-- Large screens -->
-      <source
-        media="(min-width: 535px)"
-        data-original-set="{{ .Get "src" }}.{{ .Get "type" }} 1x,
-                {{ .Get "src" }}@2x.{{ .Get "type" }} 2x">
-      <!-- Small screens -->
-      <source
-        media="(max-width: 534px)"
-        data-original-set="{{ .Get "src" }}-sm.{{ .Get "type" }} 1x,
-                {{ .Get "src" }}-sm@2x.{{ .Get "type" }} 2x">
-      <!-- Fallback -->
-      <img
-        data-original="{{ .Get "src" }}.{{ .Get "type" }}"
-        data-original-set="{{ .Get "src" }}@2x.{{ .Get "type" }} 2x"
-        alt="{{ .Get "alt" }}"{{ if .Get "caption"}} class="img-fluid figure-img"{{ end }}>
-    </picture>
-  {{ if .Get "caption"}}
-    <figcaption>{{ .Get "caption" }}</figcaption>
-  </figure>
+  {{ if ge $src.Width "800" }}
+    {{ with $small.RelPermalink }}, {{.}} 800w{{ end }}
   {{ end }}
-</div>
+  {{ if ge $src.Width "1200" }}
+    {{ with $medium.RelPermalink }}, {{.}} 1200w{{ end }}
+  {{ end }}
+  {{ if ge $src.Width "1500" }}
+    {{ with $large.RelPermalink }}, {{.}} 1500w {{ end }}
+  {{ end }}'
+  {{ if .Get (print $medium) }}
+    src="{{ $medium.RelPermalink }}" 
+  {{ else }}
+    src="{{ $src.RelPermalink }}" 
+  {{ end }}
+  {{ with .Get "alt" }}alt="{{.}}"{{ else }}alt=""{{ end >}}
